# mydttv

./: .gitignore  build.gradle  settings.gradle
Libdttv/: CMakeLists.txt  build.gradle
Libdttv/src/main/: AndroidManifest.xml
Libdttv/src/main/java/dai/android/learn/dttv/: MediaFile.java  MediaFormat.java  MediaPlayer.java  Metadata.java
Libdttv/src/main/java/dai/android/learn/dttv/subtitle/: SubtitleFrame.java
Libdttv/src/main/java/dai/android/learn/dttv/utils/: FileUtils.java  IOUtils.java  Logger.java  MultiMediaTypeUtil.java  MusicUtils.java  StorageUtils.java  TimesUtil.java  VolumeUtil.java
Libdttv/src/main/jni/: dttv_jni.cpp  dttv_jni.h  dttv_jni_dtp.cpp  dttv_jni_dtp.h  dttv_jni_log.h  dttv_jni_surface.cpp  dttv_jni_utils.c  dttv_jni_utils.h
Libdttv/src/main/jni/include/libdtp/: dtp.h  dtp_audio_plugin.h  dtp_av.h  dtp_plugin.h  dtp_state.h  dtp_sub_plugin.h  dtp_vf.h  dtp_video_plugin.h
Libdttv/src/main/jni/plugin/: plugin_ao_opensl.c  plugin_so_android.cpp  plugin_vo_surface.cpp
Libdttv/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: iptv_source.json
app/src/main/java/dai/android/learn/dttv/app/: MainActivity.java  ThisApp.java  UrlManager.java
app/src/main/res/drawable/: pop_window_rect_background.xml  simple_button_background2.xml
app/src/main/res/layout/: activity_main.xml  pop_menu.xml  pop_url_item_button.xml
app/src/main/res/values/: strings.xml
docs/: ReadMe.md
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
